--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.page {
+  width: 1000px;
+
+  margin: 65px auto 0;
+
+  border: 1px solid green;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 58px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  gap: 48px;
+
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+li a {
+  text-decoration: none;
+}
